# sofa_plugin_maker

./: CMakeLists.txt  ExamplePluginConfig.cmake.in  LICENSE  README.md  plugin_maker.py
.github/workflows/: ci.yml
examples/python/: example.py
examples/xml/: example.scn
src/ExamplePlugin/: config.h.in  init.cpp  init.h
tests/: CMakeLists.txt
